--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;700&display=swap"
       rel="stylesheet"
     />
     <!--
